Illustration Type List

--- a/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
+++ b/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Tipos de Produtos
             </NavLink>
         </li>
+         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="tipos-de-ilustracoes">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Tipos de Ilustrações
+            </NavLink>
+        </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="illustrations">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Ilustrações
