--- a/src/Web/DamaAdmin/Client/Pages/IllustrationTypes/Upsert.razor
+++ b/src/Web/DamaAdmin/Client/Pages/IllustrationTypes/Upsert.razor
@@ -37,12 +37,12 @@ else
                     <button type="submit" class="btn btn-primary" disabled=@_isSubmitting>
                         @if (!_isSubmitting)
                         {
-                            <span>Criar</span>
+                            <span>Atualizar</span>
                         }
                         else
                         {
                             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                            <span>A criar...</span>
+                            <span>A atualizar...</span>
                         }
                     </button>
 
