Illustrations Blazored Done!

--- a/src/Web/DamaAdmin/Client/Pages/Index.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Index.razor
@@ -20,7 +20,9 @@
                 </a>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="/images/illustration.jpg" class="card-img-top" alt="Ilustrações">
+                <a href="/ilustracoes">
+                    <img src="/images/illustration.jpg" class="card-img-top" alt="Ilustrações">
+                </a>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="/images/product.jpg" class="card-img-top" alt="Produtos">
