--- a/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
+++ b/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
@@ -28,7 +28,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="illustrations">
+            <NavLink class="nav-link" href="ilustracoes">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Ilustrações
             </NavLink>
         </li>
