Products List in Blazor Applicatoin Core to net 6.0 Infrastructure to net 6.0

--- a/src/Web/DamaAdmin/Client/Pages/Index.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Index.razor
@@ -25,7 +25,9 @@
                 </a>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="/images/product.jpg" class="card-img-top" alt="Produtos">
+                <a href="/produtos">
+                    <img src="/images/product.jpg" class="card-img-top" alt="Produtos">
+                </a>
             </div>
         </div>
     </div>
