--- a/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
+++ b/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
@@ -33,7 +33,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="products">
+            <NavLink class="nav-link" href="produtos">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Produtos
             </NavLink>
         </li>
