Product Edit (OnLoad) with categories Missing: Onload with relationship and attributes; OnSave Edit

--- a/src/Web/DamaAdmin/Client/Pages/Products/List.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Products/List.razor
@@ -4,7 +4,7 @@
 <h2>Produtos</h2>
 
 <p>
-    <a href="/produtos/editar">Novo Produto</a>
+    <a href="/produtos/criar">Novo Produto</a>
 </p>
 @if (!string.IsNullOrEmpty(Message))
 {
