--- a/src/Web/DamaAdmin/Client/Pages/Products/Upsert.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Products/Upsert.razor
@@ -1,5 +1,5 @@
-﻿@page "/produtos/criar/{Id:int?}"
-@page "/produtos/editar/{Id:int?}"
+﻿@page "/produtos/criar/{Id:int?}/{message?}"
+@page "/produtos/editar/{Id:int?}/{message?}"
 
 @if (IsNew)
 {
@@ -9,7 +9,12 @@ else
 {
     <h2>Editar Produto @model?.Name</h2>
 }
-
+@if (!string.IsNullOrEmpty(Message))
+{
+    <div class="alert alert-success" role="alert">
+        @Message
+    </div>
+}
 <hr />
 
 @if (!IsNew && model == null)
@@ -207,6 +212,46 @@ else
                         </li>
                     }
                 </ul>
+                <h4 class="mt-3">Relações</h4>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>
+                                Label
+                            </th>
+                            <th>
+                                Produto Relacionado
+                            </th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in model.References)
+                        {
+                            <tr>
+                                <td>
+                                    @item.LabelDescription
+                                </td>
+                                <td>
+                                    <a href="/produtos/editar/@item.ReferenceCatalogItemId">
+                                        @item.ReferenceCatalogItemName
+                                    </a>
+                                </td>
+                                <td>
+                                    <a href="/relacoes/editar/@item.Id">Editar</a> |
+                                    <a href="/relacoes/remover/@item.Id">Remover</a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="3">
+                                <a href="/relacoes/criar/@model.Id" class="btn btn-primary">Adicionar Relação</a>
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
             </div>
         </div>
     </EditForm>
